@@ -52,6 +52,21 @@ class VehicleUnsavedTest < Test::Unit::TestCase
   def test_should_not_allow_repair
     assert !@vehicle.repair
   end
+  
+  def test_should_invoke_initial_state_and_event_callbacks
+    @vehicle.ignite
+    assert_equal %w(before_enter_parked before_enter_idling), @vehicle.callbacks
+  end
+end
+
+class VehicleAfterBeingCreatedTest < Test::Unit::TestCase
+  def setup
+    @vehicle = create_vehicle
+  end
+  
+  def test_should_invoke_initial_state_callbacks
+    assert_equal %w(before_enter_parked), @vehicle.callbacks
+  end
 end
 
 class VehicleParkedTest < Test::Unit::TestCase
